Update Latuhan Mandiri 3.3

--- a/Latuhan Mandiri 3.3
+++ b/Latuhan Mandiri 3.3
@@ -6,4 +6,11 @@ Deklarasi
 bilangan, hasil : interger
 
 Deskripsi
-INPUT bil, hasil
+INPUT bil
+SET faktorial = 1
+FOR i FROM 1 TO n DO
+        hasil = hssil * i
+    ENDFOR
+
+    PRINT "hasil dari", bil, "adalah", faktorial(bil)
+END
