Update Latihan Mandiri 3.2

--- a/Latihan Mandiri 3.2
+++ b/Latihan Mandiri 3.2
@@ -6,4 +6,14 @@ Deklarasi
 bilangan : interger
 
 Deskripsi
-INPUT 
+INPUT persamaan kuadrat
+IF D >= 0:
+    print("Akar Real/Nyata")
+ELIF D > 0:
+    print("Akar Real dan Berlainan")
+ELIF D = 0:
+    print("Akar Real dan Kembar")
+ELSE:
+    print("Akar Imajiner/Tidak Real/Khayal")
+ENDIF
+END
